--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -10,3 +10,12 @@
 
   cmi-tabs
     box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2)
+
+  paper-badge
+    top: 0px !important
+    .badge.style-scope.paper-badge
+      background-color: #ff0000
+      border-radius: 3px
+      width: 15px
+      height: 15px
+      font-size: 9px
