--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -12,10 +12,11 @@
     box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2)
 
   paper-badge
-    top: 0px !important
+    top: 0 !important
+
     .badge.style-scope.paper-badge
-      background-color: #ff0000
+      background-color: #f00
       border-radius: 3px
-      width: 15px
-      height: 15px
       font-size: 9px
+      height: 15px
+      width: 15px
