--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -2,9 +2,11 @@
 
   .curo-tabs-content
 
-
   .tab-content-container
     display: none
 
   .tab-content-container-active
     display: block
+
+  cmi-tabs
+    box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2)
